--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mingshz/webpack-api-mocker",
-  "version": "1.14.0",
+  "version": "1.14.0-1",
   "description": "提供了类似webpack-dev-server指令 webpack-dev-server-am",
   "main": "index.js",
   "bin": {
@@ -20,7 +20,7 @@
   "author": "CJ",
   "license": "ISC",
   "dependencies": {
-    "@mingshz/local-api-mocker": "0.0.8",
+    "@mingshz/local-api-mocker": "0.0.9",
     "optimist": "^0.6.1",
     "portfinder": "^1.0.13",
     "supports-color": "^5.1.0",
